fix layout shift

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -69,7 +69,15 @@ $navbar-dark-brand-hover-color: rgba(255, 255, 255, 1);
 }
 
 body {
-  font-family: $font-family-base;
+  font-family:
+    $font-family-base,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   background-color: $primary;
   color: #000;
 }
